[tool.poetry]
name = "philips-airpurifier-coap"
version = "0.0.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
license = "MIT"
readme = "README.md"
include = ["philips_airpurifier_coap"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = "^2024.7.3"
aioairctrl = "^0.2.5"
getmac = "^0.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
